--- a/9/_posts/25-07-2011-ben.md
+++ b/9/_posts/25-07-2011-ben.md
@@ -1,6 +1,10 @@
 ---
 layout: post
-title: ilk paylasım
+title: Merhaba Sanal Dünya
 ---
 
-<p> Merhaba Github </p>
+<p> Yozlaşmaya yüz tutmuş ne menem şeysindir öyle. 
+Tiryakilikler halt etmiş yanında. 
+Arkadaşlığın da pek fena sayılmaz ama soğuksun be!
+Neylersin ki muhtaçlık zordur bu memlekette...
+</p>
