--- a/1/_posts/10-12-2012-deneme.md
+++ b/1/_posts/10-12-2012-deneme.md
@@ -29,9 +29,9 @@ Görüntüde her piksel siyah ya da beyazdır. Siyahın renk değeri 0 ile ifade
  * imread fonksiyonuna, Matlab'a okutacağımız görüntünün adını veririz. Erişim kolaylığı için atama işlemi yapılır.
  * imshow fonksiyonu ile okuttuğumuz görüntüyü ekranda görüntüleriz.
  
- ` bw = imread('organlar.jpg'); `
+ ' bw = imread('organlar.jpg'); '
 
- ` imshow(bw) `
+ ' imshow(bw) '
 
 ![](http://i011.radikal.ru/1212/19/81cb8224d5f0.jpg)   
 
