--- a/1/_posts/2012-12-10-YSA-giris.md
+++ b/1/_posts/2012-12-10-YSA-giris.md
@@ -4,7 +4,9 @@ Yapay Sinir Ağları ile İki Sayının Çarpımı
 ---
 Çarpma işleminde iki giriş ve bir çıkış vardır. 
 Eğitimde 20 adet rastgele sayı seçilmiş ve test aşamasında 
-yine 20 adet rastgele sayı seçilerek sistemin performansı oraya konmuştur.
+yine 20 adet rastgele sayı seçilerek sistemin performansı ortaya konmuştur.
+
+Çarpma İşlemini yapan kod:
 
 `clear all, close all,clc;`
 
@@ -53,4 +55,10 @@ yine 20 adet rastgele sayı seçilerek sistemin performansı oraya konmuştur.
 `hold on,plot3(ptest(1,:),ptest(2,:),at,'r*'),grid on;`
 
 `legend('Gerçek deger','YSA cikisi'),xlabel('p1'),ylabel('p2'),zlabel('t'),title('Test verisi')`
+
+Ekran çıktıları:
+
+![](http://photoload.ru/data/e4/8b/18/e48b185060fb0ff49be6da43e69e624b.jpg)
+
+![](http://s002.youpic.su/pictures/1355950800/7e1dbc62c2888dfc3aec0ecc321ffa7a.jpg)
 
