--- a/1/_posts/2012-12-10-YSA-giris.md
+++ b/1/_posts/2012-12-10-YSA-giris.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-Yapay Sinir Ağları ile İki Sayının Çarpımı
+Matlab'da Yapay Sinir Ağları ile İki Sayının Çarpımı
 ---
 Çarpma işleminde iki giriş ve bir çıkış vardır. 
 Eğitimde 20 adet rastgele sayı seçilmiş ve test aşamasında 
